# mplugin_provider_pyro5

./: COPYRIGHT  README.md  pyproject.toml
src/mplugins/provider/pyro5/: __version__.py
